Auth role, swagger changes
